Fix: Fix #2344475, Panels content form regions collapsed.

--- a/plugins/layouts/panels-bootstrap-layouts-admin.css
+++ b/plugins/layouts/panels-bootstrap-layouts-admin.css
@@ -3,11 +3,16 @@
  * Grid
  * ==========================================================
  */
+
+.panels-dnd {
+  overflow: auto;
+}
+
 .panels-dnd .panel-region {
-  display: inline;
+  display: inline-block;
   float: left;
   position: relative;
-  margin-left: 1%;
+  margin: 1%;
 }
 .panels-dnd #panel-region-top {width: 98.0%;}
 .panels-dnd #panel-region-bottom {width: 98.0%;}
